apply plugin: 'com.android.application'

android 
{
  lint
  {
    baseline = file("lint-baseline.xml")
  }

  compileOptions 
  {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }

  compileSdkVersion 33
  namespace 'com.stupidbeauty.builtinftp.demo'

  defaultConfig 
  {
    buildToolsVersion = "30.0.3"
    applicationId "com.stupidbeauty.hxftpserver"
    minSdkVersion 21
    targetSdkVersion 33
    versionCode 4681
    versionName "4681.2024.2.4"
  } // defaultConfig 

  buildTypes 
  {
    release 
    {
      minifyEnabled false
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
    }
  }

  return void
}

dependencies 
{
  implementation 'com.github.hxcan:victoriafresh.android:2024.5.8'
  implementation 'com.jakewharton:butterknife:10.2.3'
  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
  implementation 'androidx.appcompat:appcompat:1.2.0'
  implementation 'com.github.hxcan:upgrademanager:2023.9.6'
  implementation 'com.github.hxcan:ftpserver:2024.8.15'
  implementation 'com.github.hxcan:feedback:2023.10.24'

//   implementation 'com.github.hxcan:ftpserver:3b21c14'
  
  implementation 'com.github.hxcan:rotatingactiveuser:2023.9.8'
  implementation 'com.upokecenter:cbor:4.2.0'
  implementation 'com.github.hxcan:voiceui:2023.6.27'
  implementation 'com.github.hxcan:CodePosition:2023.9.7'
  implementation 'com.patrickpissurno:ripple-effect:1.3.1'
  implementation "androidx.documentfile:documentfile:1.0.1"
  implementation 'com.google.android.material:material:1.2.1'
  implementation 'com.google.protobuf:protobuf-java:3.11.4'
  implementation 'dev.gustavoavila:java-android-websocket-client:2.0.2'
  implementation 'androidx.appcompat:appcompat:1.2.0'
  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
  implementation group:  'commons-io', name: 'commons-io',  version: '2.4'
  implementation group: 'commons-codec', name: 'commons-codec', version: '1.13'
  implementation 'com.squareup:otto:1.3.8'
  implementation group: 'com.simplify',name:'ink',version:'0.2.1',ext:'aar'
}

// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16

// # enable internal JDK API access at runtime
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
//         # essential for butterknife
        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

//         # if you need Glide or LomBok
//         # these may not be the exact list, but it works for me
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}
